sawing out the essence of colleagues
