# src/WC.Service.Employees.API/Models/Colleague/ColleagueCreateDto.cs
@@ -1,12 +1,0 @@
-﻿using System.ComponentModel.DataAnnotations;
-
-namespace WC.Service.Employees.API.Models.Colleague;
-
-public class ColleagueCreateDto
-{
-    [Required]
-    public required Guid EmployeeId { get; set; }
-
-    [Required]
-    public required Guid ColleagueEmployeeId { get; set; }
-}
