# src/WC.Service.Employees.API/Models/Employee/EmployeeDetailDto.cs
@@ -1,6 +1,5 @@
 ﻿using System.ComponentModel.DataAnnotations;
 using WC.Library.Web.Models;
-using WC.Service.Employees.API.Models.Colleague;
 using WC.Service.Employees.API.Models.Position;
 
 namespace WC.Service.Employees.API.Models.Employee;
@@ -20,6 +19,4 @@ public class EmployeeDetailDto : DtoBase
 
     [Required]
     public required PositionDto Position { get; set; }
-
-    public List<ColleagueDetailDto> Colleagues { get; set; } = [];
 }
